# vocal-agent-fr-live

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-coolify.yml
examples/flutter-client/lib/: main.dart
examples/react-client/: index.html  package.json  vite.config.js
examples/react-client/src/: App.jsx
services/: __init__.py  llm_service.py  memory_service.py  stt_service.py  tts_service.py
